--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
    <title>Isimemen</title>
    <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
    <div class="wrapper">
-      <header class="header">
+      <header class="header" data-aos="fade-down" data-aos-duration="3000" data-aos-delay="1000">
          <div class="header__container">
             <a class="header__logo" href="#"> <img src="img/header/logo.svg" alt="logo"></a>
             <div class="header__burger">
@@ -30,30 +31,40 @@
          </div>
       </header>
       <main class="page">
-         <section class="header-block">
+         <section class="header-block" data-aos="zoom-in" data-aos-duration="1500" data-aos-offset="0">
             <div class="header-block__container">
-               <h1 class="header-block__title"> Welcome to <br> <span>your reset</span></h1>
+               <h1 class="header-block__title" data-aos="fade-up" data-aos-duration="3000" data-aos-delay="1000">
+                  Welcome
+                  to <br> <span>your
+                     reset</span></h1>
             </div>
          </section>
          <section class="consultancy">
             <div class="consultancy__container">
-               <h2 class="consultancy__text">We are a career development & business consultancy for women of color eager
+               <h2 class="consultancy__text" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="250">We are a
+                  career development &
+                  business consultancy for
+                  women of color eager
                   to elevate themselves, uncover their life’s purpose, multiply their income, and experience fulfilled
                   lives.</h2>
                <div class="consultancy__actions">
-                  <a href="#" class="consultancy__button button">Discover More</a>
+                  <a href="#" class="consultancy__button button" data-aos="fade-up" data-aos-duration="2000"
+                     data-aos-offset="300" data-aos-delay="100">Discover More</a>
                </div>
             </div>
          </section>
          <section class="building">
             <div class="building__container">
-               <h2 class="building__text">We provide purpose-building programs that blend faith, self, and wealth.</h2>
+               <h2 class="building__text" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="300"
+                  data-aos-delay="700">We provide purpose-building programs that blend faith, self, and wealth.</h2>
             </div>
          </section>
          <section class="programs">
             <div class="programs__container">
-               <h2 class="programs__title title">Our Programs</h2>
-               <div class="programs__items">
+               <h2 class="programs__title title" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="300">Our
+                  Programs</h2>
+               <div class="programs__items" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="300"
+                  data-aos-delay="400">
                   <article class="programs__item item-programs  item-programs-1">
                      <div class="item-programs__image">
                         <a href="#"><img src="img/programs/01.jpg" alt="image"></a>
@@ -97,7 +108,8 @@
                      </div>
                   </article>
                </div>
-               <div class="programs__items_bottom">
+               <div class="programs__items_bottom" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="300"
+                  data-aos-delay="100">
                   <div class="programs__item_image">
                      <img src="img/programs/04.png" alt="girl">
                   </div>
@@ -109,8 +121,10 @@
          </section>
          <section class="statistics">
             <div class="statistics__container">
-               <h2 class="statistics__title title">The numbers say it all</h2>
-               <div class="statistics__items">
+               <h2 class="statistics__title title" data-aos="fade-up" data-aos-duration="3000" data-aos-offset="300">The
+                  numbers say it all</h2>
+               <div class="statistics__items" data-aos="fade-up" data-aos-duration="3000" data-aos-offset="300"
+                  data-aos-delay="700">
                   <article class="statistics__item item-statistics">
                      <div class="item-statistics__value">300+</div>
                      <div class="item-statistics__text">
@@ -131,14 +145,16 @@
                   </article>
                </div>
             </div>
-            <div class="statistics__text">
+            <div class="statistics__text" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="300">
                <h2 class="statistics__text_title">Your purpose is calling.It’s time to make a move</h2>
             </div>
          </section>
          <section class="career">
             <div class="career__container">
-               <h2 class="career__title title">Free resources to level up your career</h2>
-               <div class="career__items">
+               <h2 class="career__title title" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="300">Free
+                  resources to level up your career</h2>
+               <div class="career__items" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="300"
+                  data-aos-delay="400">
                   <article class="career__item item-career item-career-1">
                      <h3 class="item-career__title">Quiz</h3>
                      <div class="item-career__text">
@@ -179,8 +195,10 @@
          </section>
          <section class="review">
             <div class="review__container">
-               <h2 class="review__title title">Don’t take our word for it.</h2>
-               <div class="review__slider swiper">
+               <h2 class="review__title title" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="300">Don’t
+                  take our word for it.</h2>
+               <div class="review__slider swiper" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="300"
+                  data-aos-delay="400">
                   <div class="review__wrapper swiper-wrapper">
                      <div class="review__slide swiper-slide">
                         <div class="review__slide__text">
@@ -215,23 +233,27 @@
                </div>
             </div>
          </section>
-         <section class="capture">
+         <section class="capture" data-aos="zoom-in" data-aos-duration="1500" data-aos-offset="500">
             <img src="img/capture/01.jpg" alt="image">
          </section>
          <section class="transformation">
             <div class="transformation__container">
-               <h2 class="transformation__title">Your transformation awaits.</h2>
-               <div class="transformation__text">
+               <h2 class="transformation__title" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="300">Your
+                  transformation awaits.</h2>
+               <div class="transformation__text" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="300"
+                  data-aos-delay="400">
                   <p>If you’re ready for change, then change is ready for you.</p>
                </div>
                <div class="transformation__actions">
-                  <a href="#" class="transformation__button button">I'm Ready</a>
+                  <a href="#" class="transformation__button button" data-aos="fade-up" data-aos-duration="2000"
+                     data-aos-offset="300" data-aos-delay="500">I'm Ready</a>
                </div>
             </div>
          </section>
       </main>
-      <footer class="footer">
-         <div class="footer__top top-footer">
+      <footer class="footer" data-aos="zoom-in-up" data-aos-duration="2000">
+         <div class="footer__top top-footer" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="300"
+            data-aos-delay="1000">
             <div class="top-footer__container">
                <div class="top-footer__text">
                   <p>Sign up if you want pure gold in your inbox.</p>
@@ -266,7 +288,9 @@
    </div>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
    <script src="js/script.js"></script>
+   <script src="js/app.js"></script>
 
 </body>
 
