--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
    <div class="wrapper">
-      <header class="header" data-aos="fade-down" data-aos-duration="3000" data-aos-delay="1000">
+      <header class="header" data-aos="fade-down" data-aos-duration="3000" data-aos-delay="700">
          <div class="header__container">
             <a class="header__logo" href="#"> <img src="img/header/logo.svg" alt="logo"></a>
             <div class="header__burger">
@@ -33,7 +33,7 @@
       <main class="page">
          <section class="header-block" data-aos="zoom-in" data-aos-duration="1500" data-aos-offset="0">
             <div class="header-block__container">
-               <h1 class="header-block__title" data-aos="fade-up" data-aos-duration="3000" data-aos-delay="1000">
+               <h1 class="header-block__title" data-aos="fade-up" data-aos-duration="3000" data-aos-delay="700">
                   Welcome
                   to <br> <span>your
                      reset</span></h1>
@@ -48,15 +48,15 @@
                   to elevate themselves, uncover their life’s purpose, multiply their income, and experience fulfilled
                   lives.</h2>
                <div class="consultancy__actions">
-                  <a href="#" class="consultancy__button button" data-aos="fade-up" data-aos-duration="2000"
-                     data-aos-offset="300" data-aos-delay="100">Discover More</a>
+                  <a href="#" class="consultancy__button button" data-aos="fade-up" data-aos-duration="2500"
+                     data-aos-offset="300">Discover More</a>
                </div>
             </div>
          </section>
          <section class="building">
             <div class="building__container">
                <h2 class="building__text" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="300"
-                  data-aos-delay="700">We provide purpose-building programs that blend faith, self, and wealth.</h2>
+                  data-aos-delay="200">We provide purpose-building programs that blend faith, self, and wealth.</h2>
             </div>
          </section>
          <section class="programs">
@@ -251,7 +251,7 @@
             </div>
          </section>
       </main>
-      <footer class="footer" data-aos="zoom-in-up" data-aos-duration="2000">
+      <footer class="footer" data-aos="zoom-in-up" data-aos-duration="2000" data-aos-delay="800">
          <div class="footer__top top-footer" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="300"
             data-aos-delay="1000">
             <div class="top-footer__container">
